# Math-App

./: .env.example  .gitignore  README.md  compose.yaml  package-lock.json
backend/: Dockerfile  pyproject.toml
backend/app/: check_models.py  main.py
backend/app/prompts/: grading.py  question.py
backend/app/rag/: ingest.py  retriever.py
backend/app/routers/: grading.py  print.py  question.py
backend/app/schemas/: grading.py  print.py  question.py
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  config.ts  main.tsx  mathUnits.ts  react-katex.d.ts
frontend/src/components/: AnswerForm.tsx  AnswerReview.tsx  GradingResult.tsx  MathText.tsx  ModeDescription.tsx  PrintForm.tsx  PrintPreview.tsx  QuestionDisplay.tsx  QuestionForm.tsx
frontend/src/pages/: Home.tsx  Practice.tsx  Print.tsx
rag/documents/: README.md
