[project]
name = "math-app-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "langchain",
    "langchain-google-genai",
    "google-generativeai",
    "pydantic",
    "python-dotenv",
    "reportlab",
    "langchain-community",  # ← 追加
    "chromadb",             # ← 追加
    "pypdf",                # ← 追加
    "langchain-text-splitters",  # ← 追加
]